--- a/src/docs/요구사항.md
+++ b/src/docs/요구사항.md
@@ -1,5 +1,37 @@
 ## 기능 요구 사항
 
+- 같은 수가 같은 자리이면 스트라이트, 다른 자리에 있으면 볼
+- 같은 수가 전혀 없으면 낫싱
+
+### 입출력 요구 사항
+
+입력
+
+- 서로 다른 3자리의 수
+- 게임이 끝난 경우 재시작/종료를 구분하는 1과 2 중 하나의 수
+
+출력
+
+- 입력한 수에 대한 결과를 볼, 스트라이크 개수를 표시
+- 맞는게 없는 경우 `낫싱`
+- 게임 시작 문구 출력 `숫자 야구 게임을 시작합니다.`
+
 ## 프로그래밍 요구 사항
 
+- 프로그램의 실행의 시작점은 `App.js`의 `play` 메서드이다.
+- 패키지 파일은 변경할 수 없고, 순수 바닐라 자바스크립트로 구현한다.
+- 프로그램 종료 시 `process.exit()`를 호출하지 않는다.
+- 프로그램 구현이 완료되면 `ApplicationTest`의 모든 테스트가 성공해야 한다. 테스트가 실패한 경우 0점 처리한다.
+- 프로그래밍 요구 사항에서 달리 명시하지 않는 한 파일, 패키지 이름을 수정하거나 이동하지 않는다.
+
+### 라이브러리
+
+- `@woowacourse/mission-utils`의 `Random` 및 `Console` API를 사용하여 구현한다.
+- 랜덤 값 추출은 `Random.pickNumberInRange()`를 사용한다.
+- 사용자의 값을 입력 받고 출력하기 위해서는 `Console.readLineAsync`, `Console.print`를 사용한다.
+
 ## 과제 요구 사항
+
+- 미션은 javascript-baseball 저장소를 Fork & Clone해 시작한다.
+- 기능을 구현하기 전 docs/README.md에 구현할 기능 목록을 정리해 추가한다.
+- 과제 진행 및 제출 방법은 프리코스 과제 제출 문서를 참고한다.
