--- a/src/docs/요구사항.md
+++ b/src/docs/요구사항.md
@@ -2,6 +2,11 @@
 
 - 같은 수가 같은 자리이면 스트라이트, 다른 자리에 있으면 볼
 - 같은 수가 전혀 없으면 낫싱
+- 컴퓨터는 1에서 9까지 서로 다른 임의의 수 3개 선택
+- 유저는 서로 다른 3개의 숫자를 입력하고, 컴퓨터는 입력한 숫자에 대한 결과 출력
+- 이 과정을 반복해 컴퓨터가 선택한 3개의 숫자를 모두 맞히면 게임 종료
+- 게임을 종료한 후 게임을 다시 시작하거나 완전히 종료할 수 있다.
+- 사용자가 잘못된 값을 입력한 경우 `throw`문을 사용해 예외 발생 후 애플리케이션을 종료시킨다.
 
 ### 입출력 요구 사항
 
